# audio-plugin-lab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh
dsp/: CMakeLists.txt  DelayLine.cpp  DelayLine.h  FDN.cpp  FDN.h  Matrix.cpp  Matrix.h  MultichannelAbsorption.cpp  MultichannelAbsorption.h  MultichannelDelay.cpp  MultichannelDelay.h  OnePoleFilter.cpp  OnePoleFilter.h  Oscillator.cpp  Oscillator.h  Ramp.cpp  Ramp.h  SmoothParameter.cpp  SmoothParameter.h
plugins/tvfdn/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sandbox/: README.md
sandbox/delay_line/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sandbox/juce_tutorial_1/: CMakeLists.txt  PluginEditor.cpp
sandbox/smooth_parameter/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
templates/new_plugin/: CMakeLists.txt  PluginProcessor.h
